# madeira

./: Cargo.toml  README.md
plugins/python/: gst_madeira_plugin.py
python-plugin/plugins/python/: gst_madeira_plugin.py
src/: lib.rs
