[package]     
name = "gst-plugin-madeira"
version = "0.1.0"
edition = "2021"
description = "A GStreamer filter plugin in Rust that uses Sam v2 with ONNX"
repository = "https://github.com/jquadrino/madeira"

[lib]
name = "gstmadeira"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
gstreamer = { version = "0.22", features = ["v1_20"] }
gstreamer-base = { version = "0.22", features = ["v1_20"] }
gstreamer-video = { version = "0.22", features = ["v1_20"] }
glib = "0.19"
once_cell = "1.18"
image = "0.24"
ndarray = "0.15"
ort = "2.0.0-rc.10"
